<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logo"
            android:layout_marginTop="@dimen/_40sdp"
            android:contentDescription="@null" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppEditTextMediumLargeStyle"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:textColorHint="@drawable/color_state_list_edit_text_hint"
            app:hintTextAppearance="@style/text_in_layout_hint_Style">

            <com.android.instaclarity.teacher.widgets.AppEditText
                android:id="@+id/activity_login_et_username"
                style="@style/AppEditTextMediumLargeStyle"
                android:hint="@string/username"
                android:textColor="@color/colorHintBlack"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textSize="@dimen/text_size_16"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_25sdp"
                android:backgroundTint="@color/colorLightGray"
                />

        </android.support.design.widget.TextInputLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppEditTextMediumLargeStyle"
                android:textColorHint="@drawable/color_state_list_edit_text_hint"
                app:hintTextAppearance="@style/text_in_layout_hint_Style">

                <com.android.instaclarity.teacher.widgets.AppEditText
                    android:id="@+id/activity_login_et_password"
                    style="@style/AppEditTextMediumLargeStyle"
                    android:hint="@string/password"
                    android:textColor="@color/colorHintBlack"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_16"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_50sdp"
                    android:backgroundTint="@color/colorLightGray"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <com.android.instaclarity.teacher.widgets.AppTextView
                style="@style/AppMediumTextViewStyleLabel"
                android:text="@string/show"
                android:textColor="@color/colorBrightBlue"
                android:layout_gravity="end|center"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:padding="@dimen/_3sdp"/>

        </FrameLayout>

        <com.android.instaclarity.teacher.widgets.AppTextView
            style="@style/AppMediumTextViewStyleLabel"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBrightBlue"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_41sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:fonts="font_source_sans_pro_regular"
            />

        <com.android.instaclarity.teacher.widgets.AppTextView
            android:id="@+id/activity_login_tv_sign_in"
            style="@style/AppMediumTextViewStyleLabel"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:background="@drawable/bg_round_sign_in_btn_bright_blue"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_size_15"
            android:textColor="@android:color/white"
            app:fonts="font_source_sans_pro_bold"
            android:padding="@dimen/_14sdp"
            android:gravity="center"
            android:elevation="@dimen/_2sdp"
            />

        <com.android.instaclarity.teacher.widgets.AppTextView
            android:id="@+id/activity_login_tv_sign_up"
            style="@style/AppMediumTextViewStyleLabel"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/colorBrightBlue"
            android:layout_marginTop="@dimen/_18sdp"
            />

    </LinearLayout>

</ScrollView>